--- a/browser/gallery/index.html
+++ b/browser/gallery/index.html
@@ -16,7 +16,7 @@
     </p>
 
     <div class="article-gallery">
-      <img id="currentPhoto" src="i/spinner.gif" alt="">
+      <img id="currentPhoto" src="i/breuer-building.jpg" alt="">
       <button id="prevPhoto">Назад</button>
       <button id="nextPhoto">Вперед</button>
     </div>
@@ -35,5 +35,6 @@
       </ul>
     </div>
   </article>
+  <script src="script.js"></script>
 </body>
 </html>
