Добавлено решение ДЗ dom

--- a/dom/shop/index.html
+++ b/dom/shop/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <title>Задача 2. Интернет-магазин | Домашнее задание к лекции 2.2</title>
-  <script src="js/price-format.js"></script>
+  <script src="js/price-format.js" defer></script>
+  <script src="./js/script.js" defer></script>
 </head>
 <body>
   <div id="container">
