--- a/dom/contact-list/index.html
+++ b/dom/contact-list/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
   <title>Задача 1. Список контактов | Домашнее задание к лекции 2.2</title>
-  <script src="./js/list-view.js"></script>
+  <script src="./js/list-view.js" defer></script>
+  <script src="./js/script.js" defer></script>
 </head>
 <body>
   <div id="container">
