Добавлено решение ДЗ xhr

--- a/xhr/tabs/index.html
+++ b/xhr/tabs/index.html
@@ -8,6 +8,7 @@
   <title>Задача 2. Табы | Домашнее задание к лекции 2.3</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="tabs">
