Добавлено ДЗ по формам

--- a/html-forms/todo-list/index.html
+++ b/html-forms/todo-list/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Список дел</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <fieldset class="list-block">
