--- a/html-forms/currency-converter/index.html
+++ b/html-forms/currency-converter/index.html
@@ -7,6 +7,7 @@
   <title>Конвертер валют</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <main id="content" class="hidden">
