--- a/html-forms/feedback/index.html
+++ b/html-forms/feedback/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Форма обратной связи</title>
   <link rel="stylesheet" href="./css/form.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <h1>Форма обратной связи</h1>
@@ -21,63 +22,63 @@
       <label class="form-group">
         <p>Имя <span>*</span></p>
         <span class="icon-case"><i class="fa fa-user"></i></span>
-			  <input type="text" name="name">
-		  </label>
+        <input type="text" name="name">
+      </label>
 
-		  <label class="form-group">
-		    <p>Электронная почта <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-envelope-o"></i></span>
+      <label class="form-group">
+        <p>Электронная почта <span>*</span></p>
+        <span class="icon-case"><i class="fa fa-envelope-o"></i></span>
         <input type="email" name="email">
-			</label>
+      </label>
 
-  		<label class="form-group">
-		    <p>Компания <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-home"></i></span>
-			  <input type="text" name="company">
-	  	</label>
+      <label class="form-group">
+        <p>Компания <span>*</span></p>
+        <span class="icon-case"><i class="fa fa-home"></i></span>
+        <input type="text" name="company">
+      </label>
 
-		  <label class="form-group">
-		    <p>Адрес офиса <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-location-arrow"></i></span>
-			  <input type="text" name="address">
-	  	</label>
+      <label class="form-group">
+        <p>Адрес офиса <span>*</span></p>
+        <span class="icon-case"><i class="fa fa-location-arrow"></i></span>
+        <input type="text" name="address">
+      </label>
 
-		  <label class="form-group">
-		    <p>Почтовый индекс <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-map-marker"></i></span>
-			  <input type="text" name="zip">
-	  	</label>
+      <label class="form-group">
+        <p>Почтовый индекс <span>*</span></p>
+        <span class="icon-case"><i class="fa fa-map-marker"></i></span>
+        <input type="text" name="zip">
+      </label>
     </fieldset>
 
     <fieldset>
-		  <label class="form-group">
-		    <p>Город <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-building-o"></i></span>
-			  <input type="text" name="city">
+        <label class="form-group">
+          <p>Город <span>*</span></p>
+          <span class="icon-case"><i class="fa fa-building-o"></i></span>
+          <input type="text" name="city">
 	  	</label>
 
-		  <label class="form-group">
-		    <p>Номер телефона <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-phone"></i></span>
-			  <input type="tel" name="phone">
+        <label class="form-group">
+          <p>Номер телефона <span>*</span></p>
+          <span class="icon-case"><i class="fa fa-phone"></i></span>
+          <input type="tel" name="phone">
 	  	</label>
 
-		  <label class="form-group">
-		    <p>Специализация <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-info"></i></span>
-        <input type="text" name="role">
-			</label>
+        <label class="form-group">
+          <p>Специализация <span>*</span></p>
+          <span class="icon-case"><i class="fa fa-info"></i></span>
+          <input type="text" name="role">
+        </label>
 
   		<label class="form-group">
-	    	<p>Тема сообщения <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-comment-o"></i></span>
-        <input type="text" name="subject">
-			</label>
+          <p>Тема сообщения <span>*</span></p>
+          <span class="icon-case"><i class="fa fa-comment-o"></i></span>
+          <input type="text" name="subject">
+        </label>
 
   		<label class="form-group">
-	    	<p>Сообщение <span>*</span></p>
-		    <span class="icon-case"><i class="fa fa-comments-o"></i></span>
-        <textarea name="message" rows="14"></textarea>
+          <p>Сообщение <span>*</span></p>
+          <span class="icon-case"><i class="fa fa-comments-o"></i></span>
+          <textarea name="message" rows="14"></textarea>
   		</label>
   	</fieldset>
     <button type="submit" class="button-contact" disabled>Отправить сообщение</button>
